# macrokeystrig

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mktsetup.json
